--- a/mobile/ios/.gitignore
+++ b/mobile/ios/.gitignore
@@ -21,6 +21,7 @@ DerivedData
 *.ipa
 *.xcuserstate
 project.xcworkspace
+*.xcworkspace
 .xcode.env.local
 
 # Bundle artifacts
@@ -28,3 +29,4 @@ project.xcworkspace
 
 # CocoaPods
 /Pods/
+Podfile.lock
