--- a/mobile/app.json
+++ b/mobile/app.json
@@ -20,6 +20,7 @@
       "supportsTablet": true,
       "bundleIdentifier": "com.kriptokirmizi.alerta",
       "buildNumber": "5",
+      "associatedDomains": ["applinks:alertachart.com"],
       "infoPlist": {
         "NSCameraUsageDescription": "This app does not use the camera.",
         "NSMicrophoneUsageDescription": "This app does not use the microphone.",
@@ -43,7 +44,21 @@
         "android.permission.POST_NOTIFICATIONS"
       ],
       "useNextNotificationsApi": true,
-      "googleServicesFile": "./google-services.json"
+      "googleServicesFile": "./google-services.json",
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "https",
+              "host": "alertachart.com",
+              "pathPrefix": "/auth/callback"
+            }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -57,6 +72,7 @@
         }
       ]
     ],
+    "scheme": "com.kriptokirmizi.alerta",
     "extra": {
       "eas": {
         "projectId": "f4eb3196-3d5b-4aa0-9d0f-6075466f4f12"
