--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "expo": "54.0.22",
     "expo-application": "~7.0.7",
+    "expo-auth-session": "~7.0.8",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.16",
     "expo-device": "~8.0.9",
@@ -24,6 +25,7 @@
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-webview": "13.15.0"
