--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "dev:all": "concurrently \"npm run dev\" \"npm run worker:build -- --watch\""
   },
   "dependencies": {
+    "@capacitor-community/apple-sign-in": "^7.1.0",
+    "@capacitor/android": "^7.4.4",
+    "@capacitor/cli": "^7.4.4",
+    "@capacitor/core": "^7.4.4",
+    "@capacitor/ios": "^7.4.4",
+    "@capacitor/push-notifications": "^7.0.3",
+    "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@neondatabase/serverless": "^0.9.0",
     "eventemitter3": "^5.0.1",
     "expo-server-sdk": "^3.10.0",
