--- a/package.json
+++ b/package.json
@@ -11,13 +11,6 @@
     "dev:all": "concurrently \"npm run dev\" \"npm run worker:build -- --watch\""
   },
   "dependencies": {
-    "@capacitor-community/apple-sign-in": "^7.1.0",
-    "@capacitor/android": "^7.4.4",
-    "@capacitor/cli": "^7.4.4",
-    "@capacitor/core": "^7.4.4",
-    "@capacitor/ios": "^7.4.4",
-    "@capacitor/push-notifications": "^7.0.3",
-    "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@neondatabase/serverless": "^0.9.0",
     "eventemitter3": "^5.0.1",
     "expo-server-sdk": "^3.10.0",
@@ -30,6 +23,15 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "ws": "^8.18.0"
+  },
+  "optionalDependencies": {
+    "@capacitor-community/apple-sign-in": "^7.1.0",
+    "@capacitor/android": "^7.4.4",
+    "@capacitor/cli": "^7.4.4",
+    "@capacitor/core": "^7.4.4",
+    "@capacitor/ios": "^7.4.4",
+    "@capacitor/push-notifications": "^7.0.3",
+    "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4"
   },
   "devDependencies": {
     "@types/lodash.merge": "^4.6.9",
