--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_21
+        targetCompatibility JavaVersion.VERSION_21
+    }
 }
 
 repositories {
@@ -40,6 +44,12 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
+    
+    // Capacitor Plugins
+    implementation project(':codetrix-studio-capacitor-google-auth')
+    implementation project(':capacitor-community-apple-sign-in')
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
+    implementation 'androidx.browser:browser:1.6.0'
 }
 
 apply from: 'capacitor.build.gradle'
