--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,6 +50,10 @@ dependencies {
     implementation project(':capacitor-community-apple-sign-in')
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
     implementation 'androidx.browser:browser:1.6.0'
+    
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:33.7.0')
+    implementation 'com.google.firebase:firebase-messaging'
 }
 
 apply from: 'capacitor.build.gradle'
