Fix logout redirect to use /index.html instead of /login in Capacitor app
- Changed logout redirect logic to check for Capacitor existence instead of isNativePlatform()
- Always redirect to /index.html if Capacitor exists (native app context)
- This avoids /login page which uses NextAuth signIn() that doesn't work in WebView
- Prevents 403 disallowed_useragent error after logout
- Added detailed logging for Capacitor detection during logout

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -45,5 +45,14 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.776781271347-2pice7mn84v1mo1gaccghc6oh5k6do6i</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
