Implement native session persistence using Capacitor Preferences
- Added @capacitor/preferences plugin for reliable token storage
- Save refreshToken to Preferences after successful login
- iOS native checks Preferences on app startup and redirects to dashboard if token exists
- Clear Preferences token on logout
- This approach is more reliable than cookies/localStorage on iOS
- Works like Telegram/WhatsApp - user stays logged in after app restart

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/device": "^7.0.2",
     "@capacitor/ios": "^7.4.4",
     "@capacitor/local-notifications": "^7.0.3",
+    "@capacitor/preferences": "^7.0.2",
     "@capacitor/push-notifications": "^7.0.3",
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@neondatabase/serverless": "^0.9.0",
