Update privacy pages domain to alertachart.com and contact email to info@alertachart.com
- Update domain from alerta.kriptokirmizi.com to alertachart.com in Turkish and English privacy pages
- Update Changes section links to use alertachart.com/privacy
- Update contact email from kriptokirmizi@gmail.com to info@alertachart.com
- Add BGTaskSchedulerPermittedIdentifiers to Info.plist for background processing
- Add ITSAppUsesNonExemptEncryption key to Info.plist for export compliance

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,10 @@ alert_logs.txt
 
 # Test files
 test-pine-script*.txt
+
+# Android signing keys (GÜVENLİK - ASLA commit etmeyin!)
+android/keystore.properties
+android/app/*.keystore
+android/app/*.jks
+*.keystore
+*.jks
