feat: iPad native app appearance and responsive design
- iOS: Hide status bar on iPad for native app feel
- iOS: Configure WebView for full-screen on iPad
- iOS: Remove safe area insets and extend layout
- iOS: Fix deprecated childViewControllerForStatusBarHidden
- Web: Add iPad responsive design (768px-1024px)
- Web: Show bottom navigation bar on iPad (lg:hidden)
- Web: Add native app-like CSS for iPad (user-select: none, overscroll-behavior)
- Web: Update grid layout breakpoint to 1024px for iPad support
- Web: Update drawing toolbar visibility for iPad

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -78,5 +78,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>UIRequiresFullScreen</key>
+	<true/>
+	<key>UIApplicationSupportsMultipleScenes</key>
+	<false/>
+	<key>UIUserInterfaceStyle</key>
+	<string>Dark</string>
 </dict>
 </plist>
